# lora-forge

./: .envrc  .gitattributes  .gitignore  CLAUDE.md  README.md  REVIEW_lf-0nv.md  pyproject.toml  test_otel_client.py  test_session_linker.py
.beads/: metadata.json
configs/: base.yml
crew-docs/: convoy-design-training-foundation.md  gastown-benchmark-design.md  pir-prompt-mode-findings.md  pir-session-format.md  startup-factory-feedback.md  training-harness-plan.md
data/: Makefile  pipeline.py
docs/: data_pipeline_review.md  evaluation_review.md  training-in-practice.md  training_configs_review.md
eval/: role_bench.py
formulas/: README.md  beads-creation-expansion.formula.toml  beads-review-to-plan-expansion.formula.toml  beads-workflow.formula.toml  plan-review-to-spec-expansion.formula.toml  plan-workflow.formula.toml  plan-writing-expansion.formula.toml  spec-brainstorm-expansion.formula.toml  spec-multimodal-review-expansion.formula.toml  spec-multimodal-scope-questions-expansion.formula.toml  spec-questions-interview-expansion.formula.toml  spec-workflow.formula.toml
gt-model-eval/: deacon_provider.py  package-lock.json  promptfooconfig.yaml
infra/: Dockerfile.train  runpod_setup.sh
optuna_rig/: __main__.py  config_generator.py  objective.py  search_space.py  study.py
output/: fixed_training_data.jsonl  volume_report.md
scripts/: build_v2_dataset.py  build_v3_dataset.py  enhanced_session_extractor.py  evaluate.py  evaluate_lora.py  fixed_session_extractor.py  pull_adapter.sh  refresh_gt_prime_prompts.py  sync_data.sh  test_deacon.py  (+2 more)
(+118 files in other folders)
